--- a/k8s/mysql-statefulset.yaml
+++ b/k8s/mysql-statefulset.yaml
@@ -3,6 +3,7 @@ kind: StatefulSet
 metadata:
   name: mysql
 spec:
+  replicas: 1
   serviceName: mysql
   selector:
     matchLabels:
@@ -25,14 +26,8 @@ spec:
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
-  volumeClaimTemplates:
-  - metadata:
-      name: mysql-persistent-storage
-    spec:
-      storageClassName: standard
-      accessModes:
-        - ReadWriteOnce
-      resources:
-        requests:
-          storage: 1Gi
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pvc
 
