--- a/k8s/wp-configmap.yaml
+++ b/k8s/wp-configmap.yaml
@@ -5,9 +5,6 @@ metadata:
   labels:
     app: wordpress
 data:
-  WORDPRESS_DB_NAME: my-wordpress
-  WORDPRESS_DB_USER: my-wordpress
+  WORDPRESS_DB_NAME: mysql
+  WORDPRESS_DB_USER: root
   WORDPRESS_DB_HOST: mysql-service
-  MYSQL_DATABASE: my-wordpress
-  MYSQL_USER: my-wordpress
-
