--- a/k8s/wp-deployment.yaml
+++ b/k8s/wp-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: wordpress
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: wordpress
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: wordpress:latest
+        image: wordpress:5.8.3-php7.4-apache
         ports:
         - containerPort: 80
         envFrom:
@@ -22,4 +22,10 @@ spec:
             name: mysql-secret
         - configMapRef:
             name: wordpress-config
-
+        volumeMounts:
+        - name: wordpress-persistent-storage
+          mountPath: /var/www/html
+      volumes:
+      - name: wordpress-persistent-storage
+        persistentVolumeClaim:
+          claimName: wordpress-pvc
